fix admin header breaking on mobile and add required asterisk to forms

--- a/src/components/form/IGDBForm.scss
+++ b/src/components/form/IGDBForm.scss
@@ -122,7 +122,7 @@
     border-bottom: none;
   }
 
-  label.required::after {
+  .required::after {
     content: '*';
     color: red;
     margin-left: 4px;
